--- a/modlist.html
+++ b/modlist.html
@@ -1,12 +1,14 @@
 ﻿<ul>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-ping-display-fabric">Better Ping Display [Fabric] (by Quintinity)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/cit-resewn">CIT Resewn (by SHsuperCM)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-api">Fabric API (by modmuss50)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/not-enough-animations">Not Enough Animations (Forge/Fabric) (by tr9zw)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/not-enough-animations">Not Enough Animations (by tr9zw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/transliterationlib">TRansliterationLib (by tr9zw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-model-fix">Item Model Fix (Fabric) (by Pepper_Bell)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ok-zoomer">Ok Zoomer (by EnnuiLangeweile)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modmenu">Mod Menu (by ProspectorDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium">Sodium (by jellysquid3_)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/customskinloader">CustomSkinLoader (by xfl03)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/continuity">Continuity (by Pepper_Bell)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/perspective-mod-redux">Perspective Mod Redux (by Cynosphere)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bobby">Bobby (by Johni0702)</a></li>
